--- a/todo_list_thymeleaf_jpa_mysql/src/main/resources/templates/tasks/task.html
+++ b/todo_list_thymeleaf_jpa_mysql/src/main/resources/templates/tasks/task.html
@@ -8,12 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Tareas</h1>
+<h1 th:object="${task}" th:text="${'Tarea: ' + task.title}"></h1>
 <table>
     <thead>
     <tr>
         <th>
             ID
+        </th>
+        <th>
+            Título
         </th>
         <th>
             Descripción
@@ -32,6 +35,7 @@
     <tbody>
     <tr th:object="${task}">
         <td th:text="${task.id}"></td>
+        <td th:text="${task.title}"></td>
         <td th:text="${task.description}"></td>
         <td th:text="${task.state}"></td>
         <td th:text="${task.creationDate}"></td>
